--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       height: 100vh;
     }
     .login-box {
-      background: green;
+      background: grey;
       padding: 30px;
       border-radius: 8px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
@@ -37,7 +37,7 @@
       background: #27ae60;
       border: none;
       border-radius: 5px;
-      color: green;
+      color: grey;
       font-size: 16px;
       cursor: pointer;
     }
